[package]
name = "ruspt"
version = "0.1.0"
authors = ["Eric.Lauffenburger"]

[dependencies]
bytes = "0.4"
futures = "0.1"
env_logger = "*"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"

actix = "0.7"
actix-web = "^0.7"

[lib]
name = "rusptlib"
path = "src/lib/mod.rs"

[[bin]]
name = "ruspt"
path = "src/bin/main.rs"

[features]
default = []
parse_debug = []
exec_debug = []
core_debug = []